--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "formik": "^2.4.5",
     "html-react": "^0.0.20",
     "html-react-parser": "^4.2.9",
+    "moment": "^2.29.4",
     "parser": "^0.1.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
